--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,18 @@
         </dependency>
         <dependency>
             <groupId>com.github.Valkryst</groupId>
-            <artifactId>VECS</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <artifactId>VDice</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Valkryst</groupId>
+            <artifactId>VNameGenerator</artifactId>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VRadio</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.github.Valkryst</groupId>
