--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VECS</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>653bc24767</version>
         </dependency>
     </dependencies>
 
