--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VTerminal</artifactId>
-            <version>1.7.1-SNAPSHOT</version>
+            <version>1.0.0-ALPHA</version>
         </dependency>
     </dependencies>
 
