--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VTerminal</artifactId>
-            <version>7d2892a3a4</version>
+            <version>1.4.2-ALPHA</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
