--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VTerminal</artifactId>
-            <version>1.4.3-ALPHA</version>
+            <version>01a724f</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
