--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VDice</artifactId>
-            <version>1.0.2</version>
+            <version>154fa7d6fa533f39f9d06eff55e8384338c5166</version>
         </dependency>
         <dependency>
             <groupId>com.github.Valkryst</groupId>
