--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VTerminal</artifactId>
-            <version>1.3.0-BETA</version>
+            <version>f66a99e</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
