--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,9 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
-            <groupId>net.java.jinput</groupId>
-            <artifactId>jinput</artifactId>
-            <version>2.0.7</version>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.5.3</version>
         </dependency>
     </dependencies>
 
