--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,17 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VTerminal</artifactId>
-            <version>c6cb518</version>
+            <version>2.8.0-BETA</version>
         </dependency>
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VController</artifactId>
             <version>4028445</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Valkryst</groupId>
+            <artifactId>VJSON</artifactId>
+            <version>2ab8ba0</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
