--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VTerminal</artifactId>
-            <version>2.12.0-BETA</version>
+            <version>133960f</version>
         </dependency>
         <dependency>
             <groupId>com.github.Valkryst</groupId>
