--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VTerminal</artifactId>
-            <version>3.2.1-BETA</version>
+            <version>1255181</version>
         </dependency>
         <dependency>
             <groupId>com.github.Valkryst</groupId>
