--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>VTerminal</artifactId>
-            <version>ab7f274</version>
+            <version>3.4.0</version>
         </dependency>
         <dependency>
             <groupId>com.github.Valkryst</groupId>
